--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "type": "module",
   "dependencies": {
     "@fastify/cors": "^11.1.0",
+    "@prisma/client": "^6.16.2",
     "dotenv": "^17.2.2",
     "fastify": "^5.6.1",
-    "fastify-plugin": "^5.0.1"
+    "fastify-plugin": "^5.0.1",
+    "prisma": "^6.16.2"
   },
   "devDependencies": {
     "@types/node": "^24.5.2",
