--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx watch src/app.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc --project tsconfig.json",
     "start": "node dist/app.js"
   },
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.2",
     "fastify": "^5.6.1",
     "fastify-plugin": "^5.0.1",
+    "node-fetch": "^3.3.2",
     "prisma": "^6.16.2"
   },
   "devDependencies": {
